<resources>
    <string name="app_name">Lesson5 xml布局测试</string>
    <string name="hello">您选择的答案是：</string>
    <string name="question">1+1等于几？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="a">1</string>
    <string name="b">2</string>
    <string name="c">3</string>
    <string name="d">4</string>
    <string name="bcak">返回上一层</string>
</resources>


